# json5conf

./: json5conf.py  pyproject.toml
