[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "json5conf"
version = "0.1.2"
description = "JSON5Conf is a library to read JSON5 configuration files"
requires-python = ">=3.6"
license = { text = "LGPLv3+" }
urls = { Homepage = "https://github.com/josemvas/json5conf" }
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: POSIX",
]

dependencies = [
    "json-five",
]

[tool.setuptools]
py-modules = ["json5conf"]
